--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,59 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.homeContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
 }
 
 .logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  width: 367px;
+  height: 318px;
+  background-color: #222;
+  position: relative;
+}
+.orange {
+  width: 110px;
+  height: 90px;
+  border-radius: 10% 0 0 0;
+  border-left: 33px solid #f2994a;
+  border-top: 33px solid #f2994a;
+  transform: rotate(-45deg);
+  position: absolute;
+  top: 29%;
+  left: 33%;
+}
+.blue {
+  width: 110px;
+  height: 90px;
+  border-radius: 10% 0 0 0;
+  border-left: 33px solid #2d9cdb;
+  border-top: 33px solid #2d9cdb;
+  transform: rotate(135deg);
+  position: absolute;
+  top: 49%;
+  left: 46%;
+  margin: -10px 0 0 -18px;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+.text {
+  color: #000000;
+  font-family: 'Segoe UI';
+  font-size: 40px;
+  font-weight: 500;
+}
+
+@media screen and (max-width: 1919px) {
+  .text {
+    color: #000000;
+    font-family: 'Segoe UI';
+    font-size: 30px;
+    font-weight: 400;
+  }
+
+  .logo {
+    width: 350px;
+    height: 300px;
+    background-color: #222;
+    position: relative;
   }
 }
