--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,12 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
+  background-color: #F2F2F2;
+  }
 
 * {
   box-sizing: border-box;
